[gd_scene load_steps=5 format=2]

[ext_resource path="res://Airstrike.gd" type="Script" id=1]
[ext_resource path="res://sfx/ilmaisku saapuu sekt.mp3" type="AudioStream" id=2]
[ext_resource path="res://PropelledGrenade.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/jet_flying_over.mp3" type="AudioStream" id=4]

[node name="Airstrike" type="Node2D"]
script = ExtResource( 1 )
propelled_grenade = ExtResource( 3 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Phone"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="finished" from="AudioStreamPlayer2" to="." method="_on_AudioStreamPlayer2_finished"]
